Thu May 09 11:57:59 BST 2002  Olly Betts <olly@survex.com>

	* NEWS, PLATFORMS, README: Updated to something approximating what we
	  want for a release.

	* docs/todo.xml: Updated.

Thu May 09 10:57:59 BST 2002  Olly Betts <olly@survex.com>

	* Removed references to match_max_or_terms (which was replaced
	  by OmQuery::OP_ELITE_SET long, long ago.

Wed May 08 17:38:50 BST 2002  Olly Betts <olly@survex.com>

	* Improved api documentation comments.

Wed May 08 17:09:14 BST 2002  Olly Betts <olly@survex.com>

	* Include findheaders.pl in tarball.

Wed May 08 16:09:14 BST 2002  Olly Betts <olly@survex.com>

	* Killed off acconfig.h.

Wed May 08 15:53:11 BST 2002  Olly Betts <olly@survex.com>

	* Added autom4te-*.cache to .cvsignore.

Wed May 08 15:50:56 BST 2002  Olly Betts <olly@survex.com>

	* Rebuild docs on "make", not just "make dist" or "make install".

Wed May 08 15:07:01 BST 2002  Olly Betts <olly@survex.com>

	* Added workaround for problems with <fcntl.h> on Solaris when LFS
	  is enabled.

Wed May 08 13:44:10 BST 2002  Olly Betts <olly@survex.com>

	* Matcher can now sort on a key.  Can be rather slow at present...

Wed May 08 13:15:21 BST 2002  Olly Betts <olly@survex.com>

	* Updated todo.

Wed May 08 12:22:53 BST 2002  Olly Betts <olly@survex.com>

	* Removed ltmain.sh-s from CVS.

Wed May 08 12:21:32 BST 2002  Olly Betts <olly@survex.com>

	* buildall: run libtoolize; stripped out unnecessary stuff.

Wed May 08 09:44:45 BST 2002  Olly Betts <olly@survex.com>

	* matcher/msetpostlist.cc: Removed bogus comment cut and pasted from
	  matcher/mergepostlist.cc.

Tue May 07 17:51:57 BST 2002  Olly Betts <olly@survex.com>

	* It's "m4_include", not "m4include".

Tue May 07 17:52:36 BST 2002  Olly Betts <olly@survex.com>

	* Added autoconf/type_socklen_t macro.

Tue May 07 16:50:20 BST 2002  Olly Betts <olly@survex.com>

	* Now require autoconf 2.50, which allows us to clean up some of the
	  more unpleasant parts of the build system.
